--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,8 @@ build/Release
 
 # Dependency directories
 node_modules/
-jspm_packages/
+bin/
+dist/
 
 # TypeScript v1 declaration files
 typings/
